test/integration/bad/numeric-literal/real-bad4.stan
transformed data {
    real x = 12.345_;
}